# Indigo

./: .gitignore  Background.cpp  Background.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraFollower.cpp  CameraFollower.h  Collider.cpp  Collider.h  Collision.cpp  Collision.h  Component.cpp  Component.h  Game.cpp  Game.h  GameData.cpp  GameData.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Main.cpp  Music.cpp  Music.h  Rect.cpp  Rect.h  Resources.cpp  Resources.h  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  State.cpp  State.h  Text.cpp  Text.h  TileMap.cpp  TileMap.h  TileSet.cpp  (+5 more)
Assets/Dialogues/2/: 0.txt  1.txt  10.txt  11.txt  12.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Assets/Images/: IndigoRunningSheet.png.bak  IndigoStandingSheet.png.bak
Assets/Images/Corridor/: Corridor0.png.bak  CorridorBox.png.bak
Assets/Images/Room1/: Room1Bg.png.bak
Assets/Images/Room2/: Room2Bg.png.bak
Assets/Images/Room3/: Room3Bg.png.bak
Assets/font/: license.txt
Components/: BackArrow.cpp  BackArrow.h  Indigo.cpp  Indigo.h  InteractionZone.cpp  InteractionZone.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  MovementBound.cpp  MovementBound.h  MovementBox.cpp  MovementBox.h  Purpura.cpp  Purpura.h  RoomTransition.cpp  RoomTransition.h  SubSceneTrigger.cpp  SubSceneTrigger.h
States/: Corridor.cpp  Corridor.h  Credits.cpp  Credits.h  EndingCutscene.cpp  EndingCutscene.h  FirstRoom.cpp  FirstRoom.h  PauseMenu.cpp  PauseMenu.h  RoomOneDesk.cpp  RoomOneDesk.h  RoomThreeFuseBox.cpp  RoomThreeFuseBox.h  RoomThreeSink.cpp  RoomThreeSink.h  RoomTwoSide.cpp  RoomTwoSide.h  SecondDialogue.cpp  SecondDialogue.h  SecondRoom.cpp  SecondRoom.h  StartingCutscene.cpp  StartingCutscene.h  ThirdRoom.cpp  ThirdRoom.h  TitleState.cpp  TitleState.h
